// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rød component snapshot - default state 1`] = `
<div
  className="roed-unique-container"
>
  <div
    className="roed-section roed-banned-members"
  >
    <h2
      className="roed-section-title"
    >
      Status
    </h2>
    <div
      className="roed-names-container"
    />
  </div>
  <div
    className="roed-section"
  >
    <h2
      className="roed-section-title"
    >
      Legg Til Ny
    </h2>
    <input
      className="roed-section-input"
      onChange={[Function]}
      placeholder="Søk etter medlem..."
      type="text"
      value=""
    />
    <div
      className="roed-names-container"
    />
  </div>
</div>
`;

exports[`Rød component snapshot - with banned members 1`] = `
<div
  className="roed-unique-container"
>
  <div
    className="roed-section roed-banned-members"
  >
    <h2
      className="roed-section-title"
    >
      Status
    </h2>
    <div
      className="roed-names-container"
    >
      <div
        className="roed-banned-member-item"
      >
        <img
          alt="John Doe"
          className="roed-member-image"
          src="/path/to/profile.jpg"
        />
        <div
          className="roed-member-info"
        >
          <p
            className="roed-member-name"
          >
            John Doe
          </p>
          <p
            className="banned-date"
          >
            Fra: 
            2022-01-01
          </p>
          <p
            className="banned-date"
          >
            Til: 
            2022-12-31
          </p>
        </div>
        <button
          className="roed-modal-button-unban"
          onClick={[Function]}
        >
          Opphev Rød
        </button>
      </div>
    </div>
  </div>
  <div
    className="roed-section"
  >
    <h2
      className="roed-section-title"
    >
      Legg Til Ny
    </h2>
    <input
      className="roed-section-input"
      onChange={[Function]}
      placeholder="Søk etter medlem..."
      type="text"
      value=""
    />
    <div
      className="roed-names-container"
    />
  </div>
</div>
`;
